--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css"
         integrity="sha256-wXSrJQPGca0WuqBL6/G912FEJLNfYHnOATmLHLJZ4iY=" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link href="/styles/main.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
     <title>Alex Westerman's Portfolio</title>
 </head>
 
@@ -206,20 +206,10 @@
                 <!--END Card-->
 
                 <div class="w-100"></div>
-
-                <div class="col-12"><a href="More Projects</div>
-
-                <li>RHIT CSSE280 - This website</li>
-                <li>RHIT CSSE232 - Computer Architecture Final Project</li>
-                <ul>
-                    <li>chnasm (Assembler)</li>
-                </ul>
-                <li>RHIT CSSE220 - Joust Java Remake</li>
-                <li>RHIT ECE230 - Scavlander's Gamepad</li>
-                <li>RHIT ECE160 - Team Thunderbirds Elemental Extravaganza Robot</li>
-                <li>OpenCryptoBench</li>
-                <li>3D Printing "Experiments"</li>
-                </ul>
+            </div>
+            <div class="col-12"><a href="page/projects.html"><button class="btn btn-primary">More Projects</button></a>
+            </div>
+            </ul>
         </section>
         <aside>
 
