--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css"
         integrity="sha256-wXSrJQPGca0WuqBL6/G912FEJLNfYHnOATmLHLJZ4iY=" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <link href="styles/main.css" rel="stylesheet">
     <title>Alex Westerman's Portfolio</title>
 </head>
@@ -35,11 +36,11 @@
 
             <nav id="navbar" class="nav-menu navbar navbar-dark bg-dark">
                 <ul>
-                    <li><a href="/page/about.html" class="nav-link"><i class="bx bx-user"></i> <span>About</span></a>
+                    <li><a href="page/about.html" class="nav-link"><i class="bx bx-user"></i> <span>About</span></a>
                     </li>
-                    <li><a href="/page/resume.html" class="nav-link"><i class="bx bx-file-blank"></i>
+                    <li><a href="page/resume.html" class="nav-link"><i class="bx bx-file-blank"></i>
                             <span>Resume</span></a></li>
-                    <li><a href="/page/projects.html" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+                    <li><a href="page/projects.html" class="nav-link scrollto"><i class="bx bx-book-content"></i>
                             <span>Projects</span></a></li>
                 </ul>
             </nav>
@@ -49,178 +50,115 @@
     <!--Main Webpage Content-->
     <main id="main">
         <section class="intro">
-            <div class="container">
-                <h1 class="text-center">Software Engineer, Hardware Tinkerer, Power User, Tech Enthusiast</h1>
-                <p> </p>
-                <br>
+            <div class="container justify-content-center" style="padding-top:150px;" id="hero-container">
+                <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Software Engineer</span>
+                <div style="padding:50px;"> </div>
+                <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Hardware Tinkerer</span>
+                <div style="padding:50px;"> </div>
+                <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Power User</span>
+                <div style="padding:50px;"> </div>
+                <span class="h1 bg-body" style="padding: 5px 10px" id="hero-text">Tech Enthusiast</span>
             </div>
         </section>
         <section class="projects" id="projects-section">
-            <h1>Featured Projects</h1>
-            <!--This will eventually be replaced by a card layout or something, but its subject to change-->
-            <div class="row" id="project-cards">
-                <!--CSSE230 Computer Architecture Assembler-->
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">chnasm</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Regex Assembler for a Custom 16-bit Assembly Architecture</h5>
-                        <h6 class="card-subtitle text-muted"><em>For Rose-Hulman CSSE232: Computer Architecture</em>
-                        </h6>
+            <div class="container" style="padding-top:25px">
+                <h1>Featured Projects</h1>
+                <!--This will eventually be replaced by a card layout or something, but its subject to change-->
+                <div class="row" id="project-cards">
+                    <div class="card mb-3 col-xs-8 col-sm-6 col-md-4" id="cnhasm-card">
+                        <h3 class="card-header">chnasm</h3>
+                        <div class="card-body">
+                            <h5 class="card-title">Regex Assembler for a Custom 16-bit Assembly Architecture</h5>
+                            <h6 class="card-subtitle text-muted"><em>For Rose-Hulman CSSE232: Computer Architecture</em>
+                            </h6>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%"
+                            height="200" aria-label="Placeholder: Image cap" focusable="false" role="img"
+                            preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
+                            style="font-size:1.125rem;text-anchor:middle">
+                            <rect width="100%" height="100%" fill="#868e96"></rect>
+                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                        </svg>
+                        <div class="card-body">
+                            <span class="text-muted"><em>Language: <i class="devicon-csharp-line"></i>
+                                    C#</em></span><br>
+                            <span class="text-muted"><em>Libraries: <i class="devicon-dotnetcore-plain"></i> .NET Core
+                                    3.1</em></span><br>
+                            <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
+                        </div>
+                        <div class="card-footer text-muted"></div>
                     </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <span class="text-muted"><em>Language: C#</em></span><br>
-                        <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
+
+                    <!--StartMenuUtil-->
+                    <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 " id="startmenuutilcard">
+                        <h3 class="card-header">StartMenuUtil</h3>
+                        <div class="card-body">
+                            <h5 class="card-title">Windows Utility to Control Start Menu Shortcuts</h5>
+                            <h6 class="card-subtitle text-muted">Personal Project</h6>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%"
+                            height="200" aria-label="Placeholder: Image cap" focusable="false" role="img"
+                            preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
+                            style="font-size:1.125rem;text-anchor:middle">
+                            <rect width="100%" height="100%" fill="#868e96"></rect>
+                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                        </svg>
+                        <div class="card-body">
+                            <span class="text-muted"><em>Language: <i class="devicon-csharp-line"></i>
+                                    C#</em></span><br>
+                            <span class="text-muted"><em>Libraries: <i class="devicon-dot-net-plain"></i> .NET Standard
+                                    5,
+                                    Windows Script Host (via COM)</em></span><br>
+                            <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
+                        </div>
+                        <div class="card-footer text-muted"></div>
                     </div>
-                    <div class="card-footer text-muted"></div>
+                    <!--END Card-->
+
+                    <!--UberUnit-->
+                    <div class="card mb-3 col-xs-8 col-sm-6 col-md-4" id="uberunitcard">
+                        <h3 class="card-header">UberUnit</h3>
+                        <div class="card-body">
+                            <h5 class="card-title">A Web Application with Unit-Aware Formula Solving</h5>
+                            <h6 class="card-subtitle text-muted">For Rose-Hulman CSSE280</h6>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%"
+                            height="200" aria-label="Placeholder: Image cap" focusable="false" role="img"
+                            preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
+                            style="font-size:1.125rem;text-anchor:middle">
+                            <rect width="100%" height="100%" fill="#868e96"></rect>
+                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                        </svg>
+                        <div class="card-body">
+                            <span class="text-muted"><em>Language: <i class="devicon-html5-plain"></i> HTML5, <i
+                                        class="devicon-sass-plain"></i> Sass, <i class="devicon-javascript-plain"></i>
+                                    JS</em></span><br>
+                            <span class="text-muted"><em>Libraries: <i class="devicon-bootstrap-plain"></i> Bootstrap 5
+                                    (Bootswatch Darkly Variant), Boxicons</em></span><br>
+                            <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
+                        </div>
+                        <div class="card-footer text-muted"></div>
+                    </div>
+                    <!--END Card-->
+                    <div class="col-12"><a href="page/projects.html"><button class="btn btn-primary col-12">More
+                                Projects</button></a>
+                    </div>
+                    </ul>
                 </div>
-                <!--END Card-->
-
-
-                <!--Armanipulator-->
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">Armanipulator</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Rudimentary Robotic Arm Utilizing Pneumatic Leverage and Extensible
-                            Arduino Firmware </h5>
-                        <h6 class="card-subtitle text-muted">For PLTW Engineering Design and Development</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <span class="text-muted"><em>Language: <i class="bx bxl-c-plus-plus"></i> C++
-                                (Arduino)</em></span><br>
-                        <a href="https://github.com/rhit-westeraj/Armanipulator" class="card-link"><i
-                                class="bx bxl-github"></i> Github Repo</a>
-                    </div>
-                    <div class="card-footer text-muted"></div>
-                </div>
-                <!--END Card-->
-
-
-
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">Card header</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <a href="https://github.com/rhit-westeraj/rhitwesteraj.github.io" class="card-link"><i
-                                class="bx bxl-github"></i> Github Repo</a>
-                    </div>
-                    <div class="card-footer text-muted"></div>
-                </div>
-                <!--END Card-->
-
-                <div class="w-100 d-none d-md-block"></div>
-
-                <!--CSSE230 Computer Architecture Assembler-->
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">chnasm</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Regex Assembler for a Custom 16-bit Assembly Architecture</h5>
-                        <h6 class="card-subtitle text-muted"><em>For Rose-Hulman CSSE232: Computer Architecture</em>
-                        </h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <span class="text-muted"><em>Language: C#</em></span><br>
-                        <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
-                    </div>
-                    <div class="card-footer text-muted"></div>
-                </div>
-                <!--END Card-->
-
-
-                <!--Armanipulator-->
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">Armanipulator</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Rudimentary Robotic Arm Utilizing Pneumatic Leverage and Extensible
-                            Arduino Firmware </h5>
-                        <h6 class="card-subtitle text-muted">For PLTW Engineering Design and Development</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <span class="text-muted"><em>Language: <i class="bx bxl-c-plus-plus"></i> C++
-                                (Arduino)</em></span><br>
-                        <a href="https://github.com/rhit-westeraj/Armanipulator" class="card-link"><i
-                                class="bx bxl-github"></i> Github Repo</a>
-                    </div>
-                    <div class="card-footer text-muted"></div>
-                </div>
-                <!--END Card-->
-
-
-
-                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 ">
-                    <h3 class="card-header">Card header</h3>
-                    <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-                        aria-label="Placeholder: Image cap" focusable="false" role="img"
-                        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                        style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
-                    <div class="card-body">
-                        <a href="https://github.com/rhit-westeraj/rhitwesteraj.github.io" class="card-link"><i
-                                class="bx bxl-github"></i> Github Repo</a>
-                    </div>
-                    <div class="card-footer text-muted"></div>
-                </div>
-                <!--END Card-->
-
-                <div class="w-100"></div>
-            </div>
-            <div class="col-12"><a href="page/projects.html"><button class="btn btn-primary">More Projects</button></a>
-            </div>
-            </ul>
         </section>
-        <aside>
-
-        </aside>
     </main>
     <footer>
-        <!--legal disclaimers + crediting Bootstrap and the theme I used will go here-->
-        <!--I might add a "Check this code out on github" button or something idk-->
+        <div class="container bg-dark flex-grow-1" style="margin-top: 20px;">
+            <div class="text-muted text-center">Alex "FaceFTW" Westerman <i class="bx bx-copyright"></i>2021 All Rights
+                Reserved.</div>
+            <div class="text-muted text-center">Source code for this website is licensed under the MIT License</div>
+            <div class="text-muted text-center">This website was created by hand with Bootstrap 5.0.1, using the
+                Bootswatch Darkly Variant</div>
+            <div class="text-muted text-center"></div>
+        </div>
     </footer>
     <!--Script Links-->
-    <script src="/scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
