Completed Most of the website
-Added assets for the portfolio website card
-Finished About Page
-Finished Resume page (enough for now)
-Updated Index to use the portfolio for now

--- a/index.html
+++ b/index.html
@@ -86,33 +86,29 @@
                                 Github Repo</a></div>
                     </div>
 
-                    <!--StartMenuUtil-->
-                    <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 mx-2" style="width:32rem" id="startmenuutilcard">
-                        <h3 class="card-header">StartMenuUtil</h3>
-                        <div class="card-body">
-                            <h5 class="card-title">Windows Utility to Control Start Menu Shortcuts</h5>
-                            <h6 class="card-subtitle text-muted">Personal Project</h6>
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%"
-                            height="200" aria-label="Placeholder: Image cap" focusable="false" role="img"
-                            preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180"
-                            style="font-size:1.125rem;text-anchor:middle">
-                            <rect width="100%" height="100%" fill="#868e96"></rect>
-                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                        </svg>
-                        <div class="card-body">
-                            <span class="text-muted"><em>Language: <i class="devicon-csharp-line"></i>
-                                    C#</em></span><br>
-                            <span class="text-muted"><em>Libraries: <i class="devicon-dot-net-plain"></i> .NET Standard
-                                    5,
-                                    Windows Script Host (via COM)</em></span><br>
-
-                        </div>
-                        <div class="card-footer text-muted">
-                            <a href="#" class="card-link"><i class="bx bxl-github"></i> Github Repo</a>
-                        </div>
+                <!--Portfolio-->
+                <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 mx-2" style="width:32rem" id="portfoliocard">
+                    <h3 class="card-header">Portfolio Website</h3>
+                    <div class="card-body">
+                        <h5 class="card-title">A Personally Desinged Portfolio Website With a Modern Look and Feel
+                        </h5>
+                        <h6 class="card-subtitle text-muted">Originally for Rose-Hulman CSSE280, Further Worked On
+                            Personally</h6>
                     </div>
-                    <!--END Card-->
+                    <img src="/assets/portfolio.png">
+                    <div class="card-body">
+                        <span class="text-muted"><em>Language: <i class="devicon-html5-plain"></i> HTML5, <i
+                                    class="devicon-sass-plain"></i> Sass, <i class="devicon-javascript-plain"></i>
+                                JS</em></span><br>
+                        <span class="text-muted"><em>Libraries: <i class="devicon-bootstrap-plain"></i> Bootstrap 5
+                                (Bootswatch Darkly Variant), Boxicons </em></span><br>
+
+                    </div>
+                    <div class="card-footer text-muted"> <a
+                            href="https://github.com/rhit-westeraj/rhit-westeraj.github.io" class="card-link"><i
+                                class="bx bxl-github"></i> Github Repo</a></div>
+                </div>
+                <!--END Card-->
 
                     <!--UberUnit-->
                     <div class="card mb-3 col-xs-8 col-sm-6 col-md-4 mx-2" style="width:32rem" id="uberunitcard">
